removed enable preview